@@ -3,6 +3,7 @@ Jython NEWS
 Jython 2.5.1rc2
   Bugs Fixed
     - [ 1079 ] fixed regression on issue: twisted.python.threadable module: missing attribute '_RLock'
+    - [ 1461 ] assert statement should lookup AssertionError using getglobal
 
 Jython 2.5.1rc1
   New Features
